[gd_scene load_steps=4 format=3 uid="uid://mep6s1hxljh5"]

[ext_resource type="Script" uid="uid://b2vjyc5iuelpw" path="res://ui/cycle_option.gd" id="1_iep31"]
[ext_resource type="FontFile" uid="uid://we5onkvfxecy" path="res://fonts/van_small_font.ttf" id="1_q5o0f"]

[sub_resource type="LabelSettings" id="LabelSettings_iep31"]
resource_local_to_scene = true
font = ExtResource("1_q5o0f")
font_color = Color(0.263, 0.263, 0.263, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="CycleOption" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
focus_mode = 2
script = ExtResource("1_iep31")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Label:"
label_settings = SubResource("LabelSettings_iep31")

[node name="LeftArrow" type="Label" parent="."]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_q5o0f")
text = "<"
label_settings = SubResource("LabelSettings_iep31")

[node name="Selection" type="Label" parent="."]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_q5o0f")
text = "Selection"
label_settings = SubResource("LabelSettings_iep31")

[node name="RightArrow" type="Label" parent="."]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_q5o0f")
text = ">"
label_settings = SubResource("LabelSettings_iep31")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
